1. new english study post. 2. add some content into 3 posts.

--- a/englishnews/reuters/alaskaairlines_0826/index.html
+++ b/englishnews/reuters/alaskaairlines_0826/index.html
@@ -84,7 +84,7 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
       </li><li>
-        <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
+        <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
@@ -197,7 +197,7 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
   <polyline points="12 6 12 12 15 15"/>
   
 </svg>
-4 mins read
+5 mins read
 </span>
 
 
@@ -291,6 +291,9 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
 <blockquote>
 <p>Not many actors do their won <strong>stunts</strong>.
 不是很多演员亲自表演特技动作.</p>
+
+<p>The 47-year-old actor joked that at this point in his life, &ldquo;kneeling is a <strong>stunt</strong> for me.&rdquo;
+這位47歲的演員開玩笑說, 到了人生的這個階段, &ldquo;連下跪對我來說都是一種特技了&rdquo;</p>
 </blockquote>
 
 <ul>
@@ -300,6 +303,9 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
 <blockquote>
 <p>The northern part of the city used to be <strong>sparsely</strong> populated, but has now become a cultural centre.
 城北过去很冷落, 现在成了文化区.</p>
+
+<p>He owns two properties in the deep, <strong>sparsely</strong> populated countryside where bears and other wildlife roam wild.
+他在幽深且人因稀少的鄉下擁有著兩處地產, 熊以及其他野生動物在那裡自由地遊蕩著.</p>
 </blockquote>
 
 <ul>
@@ -355,6 +361,9 @@ Rob 听到她死去的消息悲痛欲绝.</p>
 <blockquote>
 <p>All the fighters landed safely on the airport after the military <strong>maneuver</strong>.
 在军事演习后，所有战斗机都安全降落在机场上.</p>
+
+<p>Stunt pilots perform different <strong>maneuvers</strong> each show, which more than 60 shows across 30 sites in the U.S. and Canada this year.
+特技飛行員們在每一場航展上表演著不同的機動動作, 今年在美國和加拿大的30個場地上會舉辦超過60場航展.</p>
 </blockquote>
 
 <hr />
@@ -377,6 +386,9 @@ Rob 听到她死去的消息悲痛欲绝.</p>
 <blockquote>
 <p>Police <strong>probed</strong> claims that he had sold drugs.
 警方就有人称他贩卖毒品一事进行了调查.</p>
+
+<p>Mr. Strzok was part of both the Clinton investigation and the ongoing Russia <strong>probe</strong>.
+Strzok 先生參與了對 Clinton 的調查以及正在進行的 Trump 通俄調查.</p>
 </blockquote>
 
 <ul>
