--- a/englishnews/washingtonpost/bestfilms_0828/index.html
+++ b/englishnews/washingtonpost/bestfilms_0828/index.html
@@ -82,7 +82,7 @@
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
       </li><li>
-        <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
+        <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
@@ -195,7 +195,7 @@
   <polyline points="12 6 12 12 15 15"/>
   
 </svg>
-5 mins read
+6 mins read
 </span>
 
 
@@ -280,6 +280,9 @@
 <blockquote>
 <p>From at least the Song Dynasty onward, Chinese scholar&rsquo;s rocks were an important object of Chinese material culture and aesthetic <strong>connoiseurship</strong>.
 自宋朝以来, 甚或更早之前, 文人石一直是中国物质文化与美学鉴赏中不可或缺的重要元素.</p>
+
+<p>As its name suggests, the page is meant to be more about taste than price - a chance to show <strong>connoisseuship</strong>.
+顧名思義, 這個頁面更多的是關於品味而不是價格 - 它是一個展示鑒賞力的機會.</p>
 </blockquote>
 
 <ul>
@@ -289,6 +292,9 @@
 <blockquote>
 <p>This statue is an object of religious <strong>veneration</strong>.
 这座塑像是宗教崇拜的对象.</p>
+
+<p>A morality that included both pacifism and a <strong>veneration</strong> of the natural world.
+一個包含了和平主義和對自然主義的崇拜的道德標準.</p>
 </blockquote>
 
 <ul>
@@ -343,6 +349,9 @@
 <blockquote>
 <p>The pity is that you are not a <strong>prophet</strong>.
 可惜你不能未卜先知.</p>
+
+<p>To a new mother, a woman with a child a few months older than yours is a <strong>prophet</strong>.
+對於一位新媽媽來說, 一位女性的孩子如果比自己孩子大上幾個月, 這位女性就像是他的先知.</p>
 </blockquote>
 
 <ul>
@@ -432,12 +441,15 @@
 </blockquote>
 
 <ul>
-<li><a name="whimsy"></a><strong>whimsy</strong>:(n) [&lsquo;wɪmzɪ] 古怪想法(篇好笑的) a way of thinking, behaving, or doing something that is unusual, strange, and often amusing.  <a href="#whimsy_">back</a></li>
+<li><a name="whimsy"></a><strong>whimsy</strong>:(n) [&lsquo;wɪmzɪ] 異想天開, 古怪想法(篇好笑的) a way of thinking, behaving, or doing something that is unusual, strange, and often amusing.    <a href="#whimsy_">back</a></li>
 </ul>
 
 <blockquote>
 <p>Americans have a strong taste for slapstick in various forms, and substitute riposte and banter for irony or <strong>whimsy</strong>, which they tend not to understand.
 美国人对各种形式的闹剧非常感兴趣，用机敏的回答和玩笑来代替他们所不懂的讽刺和诙谐.</p>
+
+<p>The film combines <strong>whimsy</strong> and tragedy in equal measure.
+這部電影同等程度上結合了奇思妙想和悲劇色彩.</p>
 </blockquote>
 
 <ul>
@@ -552,6 +564,16 @@
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Washington Post] &#39;Please do not switch me off!&#39;: An experiment with a begging robot shows people hesitate to pull the plug</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/theguardian/hackeraustralian_0829/'>
+        <span class='screen-reader-text'>Next post: </span>[The Guardian] Australian boy who hacked into Apple network admired the group<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
