--- a/englishnews/washingtonpost/robot_news_0827/index.html
+++ b/englishnews/washingtonpost/robot_news_0827/index.html
@@ -84,7 +84,7 @@ In an experiment designed to investigate how people treat robots when they act l
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
       </li><li>
-        <a href='/tags/guardian' style='font-size:1em'>Guardian</a>
+        <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
@@ -263,17 +263,25 @@ In an experiment designed to investigate how people treat robots when they act l
 <blockquote>
 <p>I think we have to <strong>pull the plug</strong> on this thing.
 我觉得我们应该停止这一切.</p>
+
+<p>The television company <strong>pulled the plug</strong> on the series after only five episodes.
+這部電視劇只撥出了5集就被電視公司停播了.</p>
+
+<p>Having lost three times in a row, Noel was ready to <strong>pull the plug</strong> on his running career.
+連續三次之後, Noel 已經準備放棄自己的跑步生涯.</p>
 </blockquote>
 
 <hr />
 
 <ul>
-<li><a name="humanoid"></a><strong>humanoid</strong>:(a) [&lsquo;hjuːmənɒɪd] 像人的, having a human shape and human qualities.  <a href="#humanoid_">back</a></li>
+<li><a name="humanoid"></a><strong>humanoid</strong>:(a) [&lsquo;hjuːmənɒɪd] 像人的, having a human shape and human qualities. (n) 人形機器人    <a href="#humanoid_">back</a></li>
 </ul>
 
 <blockquote>
 <p>The robot was <strong>humanoid</strong> in appearance.
 那个机器人具有人类的外形.</p>
+
+<p>In one video, Atlas, the <strong>humanoid</strong> robot, goes for a jog in a grassy yard.</p>
 </blockquote>
 
 <ul>
@@ -315,6 +323,8 @@ In an experiment designed to investigate how people treat robots when they act l
 
 <p><strong>pleading</strong> eyes.
 乞求的眼神</p>
+
+<p>A man <strong>pleaded</strong> to be let into a locked police station then lunged with a knife at officers inside.</p>
 </blockquote>
 
 <ul>
@@ -402,6 +412,9 @@ Caldwell 恳求捐款.</p>
 <blockquote>
 <p>The computer and the human mind have different but <strong>complementary</strong> abilities.
 电脑与人脑各不相同, 却又互为补充.</p>
+
+<p>The painter uses bold <strong>complementary</strong> colors, pitting red against green or purple against yellow.
+畫家用大膽的互補色, 紅色和綠色, 或紫色和黃色相映成趣.</p>
 </blockquote>
 
 <ul>
@@ -420,6 +433,9 @@ Caldwell 恳求捐款.</p>
 <blockquote>
 <p>Creativity is a human <strong>trait</strong>.
 创造力是人类的一种特性.</p>
+
+<p>The longing for homeland is a common enough <strong>trait</strong>.
+对祖国的渴望是一个普遍存在的人类特性.</p>
 </blockquote>
 
 <ul>
