1. new english study post. 2. edit awk post.

--- a/englishnews/theguardian/hackeraustralian_0829/index.html
+++ b/englishnews/theguardian/hackeraustralian_0829/index.html
@@ -94,7 +94,7 @@ Despite the court being told that the teenager had downloaded 90GB of secure fil
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
-        <a href='/tags/reuters' style='font-size:1.3333333333333333em'>Reuters</a>
+        <a href='/tags/reuters' style='font-size:1.6666666666666665em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
@@ -456,6 +456,16 @@ Amy 夸耀自己的儿子是天才.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Washington Post] The new Canon: the best films of the 2000s</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/reuters/murderofdidi_0902/'>
+        <span class='screen-reader-text'>Next post: </span>[Reuters] Murder of Didi passenger prompts China clampdown, outrage<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
