1. new english study post. 2. edit awk post.

--- a/englishnews/BBCNews/elonmusk_0824/index.html
+++ b/englishnews/BBCNews/elonmusk_0824/index.html
@@ -80,6 +80,8 @@ If it turns out his Twitter promise - that he has secured the tens of billions o
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
