--- a/developmenttools/gitstudy/gitrelated_1/index.html
+++ b/developmenttools/gitstudy/gitrelated_1/index.html
@@ -88,6 +88,8 @@
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
