--- a/developmenttools/iterm2setting/index.html
+++ b/developmenttools/iterm2setting/index.html
@@ -90,6 +90,8 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
