--- a/englishnews/newyorktimes/chinaintroverts_0815/index.html
+++ b/englishnews/newyorktimes/chinaintroverts_0815/index.html
@@ -82,6 +82,8 @@ The &ldquo;Finnish Nightmares&rdquo; comic series documents the social challenge
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
