--- a/englishnews/newyorktimes/naipaul_0825/index.html
+++ b/englishnews/newyorktimes/naipaul_0825/index.html
@@ -80,6 +80,8 @@ His family confirmed the death in a statement, The Associated Press reported.'>
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
