--- a/englishnews/reuters/murderofdidi_0902/index.html
+++ b/englishnews/reuters/murderofdidi_0902/index.html
@@ -80,6 +80,8 @@ The killing of a 20-year-old passenger who rode in the Didi vehicle on Friday in
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
@@ -513,6 +515,16 @@ The killing of a 20-year-old passenger who rode in the Didi vehicle on Friday in
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[The Guardian] Australian boy who hacked into Apple network admired the group</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/theguardian/freesanitary_0906/'>
+        <span class='screen-reader-text'>Next post: </span>[The Guardian] Scotland to offer free sanitary products to all students in world first<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
