--- a/englishnews/theguardian/hackeraustralian_0829/index.html
+++ b/englishnews/theguardian/hackeraustralian_0829/index.html
@@ -82,6 +82,8 @@ Despite the court being told that the teenager had downloaded 90GB of secure fil
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
