--- a/englishnews/washingtonpost/robot_news_0827/index.html
+++ b/englishnews/washingtonpost/robot_news_0827/index.html
@@ -80,6 +80,8 @@ In an experiment designed to investigate how people treat robots when they act l
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
