--- a/englishnews/washingtonpost/spaceforce_0820/index.html
+++ b/englishnews/washingtonpost/spaceforce_0820/index.html
@@ -80,6 +80,8 @@ In a speech at the Pentagon Thursday at 11:15 a.m., Vice President Mike Pence is
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
