--- a/englishnews/washingtonpost/trollaccount_0823/index.html
+++ b/englishnews/washingtonpost/trollaccount_0823/index.html
@@ -82,6 +82,8 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
