--- a/machinelearning/stanford_cheatsheet_0826/index.html
+++ b/machinelearning/stanford_cheatsheet_0826/index.html
@@ -82,6 +82,8 @@ Probabilities and Statistics refresher Linear Algebra and Calculus refresher Dee
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
