--- a/web/deployment/githubblog/usegithub_1/index.html
+++ b/web/deployment/githubblog/usegithub_1/index.html
@@ -82,6 +82,8 @@ refer to: What is GitHub Pages?
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
