--- a/web/staticsitegenerator/hugo/usehugo_1/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_1/index.html
@@ -92,6 +92,8 @@ $ hugo version Hugo Static Site Generator v0.42.2 darwin/amd64  建立網站 $ h
       </li><li>
         <a href='/tags/economist' style='font-size:1em'>Economist</a>
       </li><li>
+        <a href='/tags/education' style='font-size:1em'>Education</a>
+      </li><li>
         <a href='/tags/git' style='font-size:1em'>Git</a>
       </li><li>
         <a href='/tags/github' style='font-size:1em'>GitHub</a>
