1. new english study post.

--- a/englishnews/theguardian/freesanitary_0906/index.html
+++ b/englishnews/theguardian/freesanitary_0906/index.html
@@ -94,6 +94,8 @@ The Scottish government is the first in the world to make sanitary products avai
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
+      </li><li>
         <a href='/tags/reuters' style='font-size:1.6666666666666665em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
@@ -199,7 +201,7 @@ The Scottish government is the first in the world to make sanitary products avai
   <polyline points="12 6 12 12 15 15"/>
   
 </svg>
-4 mins read
+5 mins read
 </span>
 
 
@@ -252,6 +254,9 @@ The Scottish government is the first in the world to make sanitary products avai
 
 <p>Often, the camps were not very <strong>sanitary</strong>.
 营地里常常不太卫生.</p>
+
+<p>Cholera thrives in poor <strong>sanitary</strong> conditions.
+霍亂在惡劣的衛生條件下肆虐.</p>
 </blockquote>
 
 <hr />
@@ -333,6 +338,9 @@ The Scottish government is the first in the world to make sanitary products avai
 
 <p>the <strong>scourge</strong> of war.
 战争的祸害.</p>
+
+<p>We must eradicate the <strong>scourge</strong> of gun violence from our communities.
+我們必須從我們的社區根除槍枝暴力的禍害.</p>
 </blockquote>
 
 <ul>
@@ -386,6 +394,9 @@ The Scottish government is the first in the world to make sanitary products avai
 <blockquote>
 <p>You have to joiin the party at <strong>grassroots</strong> level from what I understand.
 据我的了解，你得由基层组织入党.</p>
+
+<p>&ldquo;Nazis understand <strong>grassroots</strong> organizing better than the Democrats,&rdquo; Bee joked.
+Bee 打趣道: &ldquo;納粹比社會民主黨更加理解基層組織建設.&rdquo;</p>
 </blockquote>
 
 <ul>
@@ -424,6 +435,12 @@ The Scottish government is the first in the world to make sanitary products avai
 <blockquote>
 <p>If they don&rsquo;t manage their time well they <strong>miss out on</strong> things.
 如果他们没有处理好自己的时间，他们就会错过一些事情.</p>
+
+<p>I&rsquo;d hate to <strong>miss out on</strong> the theatricality of a wedding.
+我不希望錯過婚禮上的盛大場面.</p>
+
+<p>The leaders <strong>miss out on</strong> one important aspect.
+領導們遺漏了一個重要方面.</p>
 </blockquote>
 
 <ul>
@@ -442,6 +459,9 @@ The Scottish government is the first in the world to make sanitary products avai
 <blockquote>
 <p>The <strong>stigma</strong> of alcoholism makes it difficult to treat.
 酗酒的恶名令其很难治愈.</p>
+
+<p>Gently she encouraged me, reminding me this is how to end the <strong>stigma</strong>.
+他溫柔地鼓勵我, 提醒我這是結束恥辱的方式.</p>
 </blockquote>
 
 </div>
@@ -484,6 +504,16 @@ The Scottish government is the first in the world to make sanitary products avai
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Reuters] Murder of Didi passenger prompts China clampdown, outrage</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/theguardian/vanillaicecreams_0907/'>
+        <span class='screen-reader-text'>Next post: </span>[The Guardian] One in five vanilla ice-creams has no vanilla, cream or fresh milk<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
