--- a/machinelearning/stanford_cheatsheet_0826/index.html
+++ b/machinelearning/stanford_cheatsheet_0826/index.html
@@ -96,6 +96,8 @@ Probabilities and Statistics refresher Linear Algebra and Calculus refresher Dee
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
+      </li><li>
         <a href='/tags/reuters' style='font-size:1.6666666666666665em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
