--- a/englishnews/reuters/murderofdidi_0902/index.html
+++ b/englishnews/reuters/murderofdidi_0902/index.html
@@ -94,6 +94,8 @@ The killing of a 20-year-old passenger who rode in the Didi vehicle on Friday in
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
+      </li><li>
         <a href='/tags/reuters' style='font-size:1.6666666666666665em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
