--- a/englishnews/washingtonpost/trollaccount_0823/index.html
+++ b/englishnews/washingtonpost/trollaccount_0823/index.html
@@ -96,6 +96,8 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
       </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
+        <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
+      </li><li>
         <a href='/tags/reuters' style='font-size:1.6666666666666665em'>Reuters</a>
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
