--- a/englishnews/newyorktimes/chinaintroverts_0815/index.html
+++ b/englishnews/newyorktimes/chinaintroverts_0815/index.html
@@ -90,6 +90,8 @@ The &ldquo;Finnish Nightmares&rdquo; comic series documents the social challenge
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
