--- a/englishnews/theguardian/freesanitary_0906/index.html
+++ b/englishnews/theguardian/freesanitary_0906/index.html
@@ -88,6 +88,8 @@ The Scottish government is the first in the world to make sanitary products avai
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
