--- a/englishnews/theguardian/vanillaicecreams_0907/index.html
+++ b/englishnews/theguardian/vanillaicecreams_0907/index.html
@@ -90,6 +90,8 @@ One in five of the ice-creams examined by the consumer watchdog had none of the 
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
@@ -543,6 +545,16 @@ One in five of the ice-creams examined by the consumer watchdog had none of the 
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[The Guardian] Scotland to offer free sanitary products to all students in world first</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/theguardian/alcohol_0910/'>
+        <span class='screen-reader-text'>Next post: </span>[The Guardian] The Guardian view on alcohol: drinking less is good for you<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
