--- a/englishnews/reuters/alaskaairlines_0826/index.html
+++ b/englishnews/reuters/alaskaairlines_0826/index.html
@@ -88,6 +88,8 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
