--- a/englishnews/theguardian/hackeraustralian_0829/index.html
+++ b/englishnews/theguardian/hackeraustralian_0829/index.html
@@ -90,6 +90,8 @@ Despite the court being told that the teenager had downloaded 90GB of secure fil
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
