--- a/englishnews/theguardian/trumpnews_0807/index.html
+++ b/englishnews/theguardian/trumpnews_0807/index.html
@@ -98,6 +98,8 @@ Hours after saying he had a &ldquo;very good meeting&rdquo; with the publisher o
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
