--- a/web/staticsitegenerator/hugo/usehugo_1/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_1/index.html
@@ -100,6 +100,8 @@ $ hugo version Hugo Static Site Generator v0.42.2 darwin/amd64  建立網站 $ h
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
