--- a/web/staticsitegenerator/hugo/usehugo_2/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_2/index.html
@@ -94,6 +94,8 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
+        <a href='/tags/health' style='font-size:1em'>Health</a>
+      </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
