1. modify english study post.

--- a/englishnews/theguardian/alcohol_0910/index.html
+++ b/englishnews/theguardian/alcohol_0910/index.html
@@ -266,6 +266,9 @@ eighs"><strong>outweighs</strong></a><a name="outweighs_"></a> the <a href="#dim
 <blockquote>
 <p>a <strong>gigantic</strong> skyscraper.
 摩天大樓.</p>
+
+<p>Who wants to board a <strong>gigantic</strong> floating condominium?
+誰想登上一座巨大的水上公寓？</p>
 </blockquote>
 
 <hr />
@@ -281,13 +284,16 @@ eighs"><strong>outweighs</strong></a><a name="outweighs_"></a> the <a href="#dim
 <hr />
 
 <ul>
-<li><a name="authoritative"></a><strong>authoritative</strong>:() [ɔː&rsquo;θɒrɪtətɪv; -,teɪtɪv] 權威的, 可信的    <a href="#authoritative_">back</a></li>
+<li><a name="authoritative"></a><strong>authoritative</strong>:(a) [ɔː&rsquo;θɒrɪtətɪv; -,teɪtɪv] 權威的, 可信的   <a href="#authoritative_">back</a></li>
 </ul>
 
 <p>-1. an authoritative book, account etc is respected because the person who wrote it knows a lot about the subject.</p>
 
 <blockquote>
 <p>the most <strong>authoritative</strong> work on English surnames. 有关英语姓氏的最权威著作.</p>
+
+<p>He showcased his military savvy and impressed Americans as an <strong>authoritative</strong> voice on foreign policy.
+他展示了自己的軍事頭腦, 讓美國人印象深刻, 並視他為外交政策的權威代言人.</p>
 </blockquote>
 
 <p>-2. behaving or speaking in a confident determined way that makes people respect and obey you.</p>
@@ -315,6 +321,16 @@ eighs"><strong>outweighs</strong></a><a name="outweighs_"></a> the <a href="#dim
 <blockquote>
 <p>The collapse of the company <strong>came as a shock</strong> to us all.
 公司的倒闭让我们所有人都感到震惊.</p>
+</blockquote>
+
+<p>come as: 以&hellip;身份 (出現)</p>
+
+<blockquote>
+<p>At one level this should <strong>come as</strong> no surprise.
+某種層面上這不應該讓人感到驚訝.</p>
+
+<p>New ideas <strong>come as</strong> a result of building upon previous ones.
+新的想法來於以往經驗知識的積累.</p>
 </blockquote>
 
 <hr />
@@ -426,6 +442,9 @@ eighs"><strong>outweighs</strong></a><a name="outweighs_"></a> the <a href="#dim
 
 <blockquote>
 <p>Such periods of <strong>abstinence</strong> were regularly punctuated  with periods of alcohol abuse. 这样的戒酒期总是有规律地被酒精滥用时期打断.</p>
+
+<p>&ldquo;Treatment available in a correctional facility will help more people than just <strong>abstinence</strong>,&rdquo; she said.
+他說: &ldquo;在勞教所提供的治療比戒絕更能幫助更多的人.&rdquo;</p>
 </blockquote>
 
 <hr />
@@ -535,6 +554,9 @@ Young 比她的对手重约60磅.</p>
 Paddy 的话在孩子们身上产生了惊人的效果.</p>
 
 <p>a <strong>startling</strong> discovery. 令人震惊的发现.</p>
+
+<p>You&rsquo;re bound to witness some <strong>startling</strong> moments if you let them put their own art onstage.
+如果你讓他們把自己的藝術幫上舞台, 你一定會見證一些驚人的時刻.</p>
 </blockquote>
 
 <p>it is startling to do sth</p>
