--- a/developmenttools/gitstudy/gitrelated_1/index.html
+++ b/developmenttools/gitstudy/gitrelated_1/index.html
@@ -110,6 +110,8 @@
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
@@ -311,6 +313,16 @@ One min read
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>讓 iTerm2 有很酷炫的外表!</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/developmenttools/awk_study/'>
+        <span class='screen-reader-text'>Next post: </span>[Shell Script] AWK 的介紹<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
