--- a/developmenttools/iterm2setting/index.html
+++ b/developmenttools/iterm2setting/index.html
@@ -112,6 +112,8 @@ $ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh $ b
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
