--- a/englishnews/reuters/alaskaairlines_0826/index.html
+++ b/englishnews/reuters/alaskaairlines_0826/index.html
@@ -102,6 +102,8 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
