--- a/englishnews/theguardian/alcohol_0910/index.html
+++ b/englishnews/theguardian/alcohol_0910/index.html
@@ -102,6 +102,8 @@ The variety of ways in which alcohol can kill or damage people comes as a shock.
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
