--- a/englishnews/theguardian/freesanitary_0906/index.html
+++ b/englishnews/theguardian/freesanitary_0906/index.html
@@ -102,6 +102,8 @@ The Scottish government is the first in the world to make sanitary products avai
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
