--- a/englishnews/theguardian/hackeraustralian_0829/index.html
+++ b/englishnews/theguardian/hackeraustralian_0829/index.html
@@ -104,6 +104,8 @@ Despite the court being told that the teenager had downloaded 90GB of secure fil
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
