--- a/englishnews/washingtonpost/trollaccount_0823/index.html
+++ b/englishnews/washingtonpost/trollaccount_0823/index.html
@@ -104,6 +104,8 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
