--- a/web/staticsitegenerator/hugo/usehugo_2/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_2/index.html
@@ -108,6 +108,8 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
       </li><li>
         <a href='/tags/washingtonpost' style='font-size:2em'>WashingtonPost</a>
       </li><li>
+        <a href='/tags/awk' style='font-size:1em'>Awk</a>
+      </li><li>
         <a href='/tags/deployment' style='font-size:1em'>Deployment</a>
       </li><li>
         <a href='/tags/hugo' style='font-size:1.6666666666666665em'>Hugo</a>
