1. new english study post.

--- a/englishnews/theguardian/alcohol_0910/index.html
+++ b/englishnews/theguardian/alcohol_0910/index.html
@@ -88,7 +88,7 @@ The variety of ways in which alcohol can kill or damage people comes as a shock.
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
-        <a href='/tags/health' style='font-size:1em'>Health</a>
+        <a href='/tags/health' style='font-size:1.3333333333333333em'>Health</a>
       </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
@@ -914,6 +914,16 @@ Cromer 是该地区主要的人口集中区域.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[The Guardian] One in five vanilla ice-creams has no vanilla, cream or fresh milk</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/reuters/frenchbaguette_0911/'>
+        <span class='screen-reader-text'>Next post: </span>[Reuters] French baguette faces pinch from anti-salt lawmakers<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
