1. new english study post. 2. modify older english study post.

--- a/englishnews/reuters/frenchbaguette_0911/index.html
+++ b/englishnews/reuters/frenchbaguette_0911/index.html
@@ -94,6 +94,8 @@ After months of investigation and hearings, a parliamentary committee has come t
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
@@ -205,7 +207,7 @@ After months of investigation and hearings, a parliamentary committee has come t
   <polyline points="12 6 12 12 15 15"/>
   
 </svg>
-11 mins read
+12 mins read
 </span>
 
 
@@ -232,7 +234,7 @@ After months of investigation and hearings, a parliamentary committee has come t
 
 <h2 id="french-baguette-baguette-a-name-baguette-a-faces-pinch-pinch-a-name-pinch-a-from-anti-salt-lawmakers">French <a href="#baguette"><strong>baguette</strong></a><a name="baguette_"></a> faces <a href="#pinch"><strong>pinch</strong></a><a name="pinch_"></a> from anti-salt lawmakers</h2>
 
-<p>France&rsquo;s <a href="#beloved"><strong>beloved</strong></a><a name="beloved_"></a> bread <a href="#loaf"><strong>loaf</strong></a><a name="loaf_"></a>, the baguette, may be about to lose some of its <a href="#bite"><strong>bite</strong></a><a name="bite_"></a>, with politicians looking into the health risks of <a href="#additives"><strong>additives</strong></a><a name="additives_"></a> set to propose <a href="#legislation"><strong>legislation</strong></a><a name="legislation_"></a> forcing <a href="#bakers"><strong>bakers</strong></a><a name="bakers_"></a> and processed food makers more generally to <a href="#slash"><strong>slash</strong></a><a name="slash_"></a> salt content.</p>
+<p>France&rsquo;s <a href="#beloved"><strong>beloved</strong></a><a name="beloved_"></a> bread <a href="#loaf"><strong>loaf</strong></a><a name="loaf_"></a>, the baguette, may be about to lose some of its <a href="#bite"><strong>bite</strong></a><a name="bite_"></a>, with politicians <a href="#lookinto"><strong>looking into</strong></a><a name="lookinto_"></a> the health risks of <a href="#additives"><strong>additives</strong></a><a name="additives_"></a> set to propose <a href="#legislation"><strong>legislation</strong></a><a name="legislation_"></a> forcing <a href="#bakers"><strong>bakers</strong></a><a name="bakers_"></a> and processed food makers more generally to <a href="#slash"><strong>slash</strong></a><a name="slash_"></a> salt content.</p>
 
 <p>After months of investigation and <a href="#hearings"><strong>hearings</strong></a><a name="hearings_"></a>, a <a href="#parliamentary"><strong>parliamentary</strong></a><a name="parliamentary_"></a> committee has come to the conclusion that <a href="#voluntary"><strong>voluntary</strong></a><a name="voluntary_"></a> agreements on the reduction of high salt levels have not been <a href="#respected"><strong>respected</strong></a><a name="respected_"></a> and that it is time to <a href="#impose"><strong>impose</strong></a><a name="impose_"></a> healthier <a href="#norms"><strong>norms</strong></a><a name="norms_"></a> via legislation.</p>
 
@@ -255,6 +257,11 @@ After months of investigation and hearings, a parliamentary committee has come t
 </ul>
 
 <p>a long thin loaf of bread, made especially in France.</p>
+
+<blockquote>
+<p>The sale of baked goods grew rapidly, the <strong>baguette</strong> in particular.
+烘培產品的銷量迅速增加, 法棍尤為突出.</p>
+</blockquote>
 
 <hr />
 
@@ -468,6 +475,20 @@ After months of investigation and hearings, a parliamentary committee has come t
 <hr />
 
 <ul>
+<li><a name="lookinto"></a><strong>look into</strong>:深入替檢查; 調查; 觀察 <a href="#lookinto_">back</a></li>
+</ul>
+
+<blockquote>
+<p>They set up a working party to <strong>look into</strong> the issue.
+他們設立了一個工作小組來調查這件事.</p>
+
+<p>The college principal promised to <strong>look into</strong> the matter.
+學院院長承諾調查這個問題.</p>
+</blockquote>
+
+<hr />
+
+<ul>
 <li><a name="additives"></a><strong>additive</strong>:(n) [&lsquo;ædɪtɪv] 添加劑    <a href="#additives_">back</a></li>
 </ul>
 
@@ -535,6 +556,9 @@ After months of investigation and hearings, a parliamentary committee has come t
 
 <blockquote>
 <p>The workforce has been <strong>slashed</strong> by 50%. 劳动力已削减了 50%.</p>
+
+<p>Prices have been <strong>slashed</strong> by 50 percent!
+價格已經直降 50%!</p>
 </blockquote>
 
 <p>-2. to cut or try to cut something violently with a knife, sword etc. 〔用刀、剑等〕猛削，劈，砍</p>
@@ -702,6 +726,9 @@ After months of investigation and hearings, a parliamentary committee has come t
 
 <blockquote>
 <p>Joyce&rsquo;s style of writing was a striking departure from the literary <strong>norm</strong>. Joyce 的写作风格与传统的文学风格大相径庭。</p>
+
+<p>Boys who default from gender <strong>norms</strong> of behaviour are deemed &ldquo;sissies&rdquo;; girls are &ldquo;tomboys&rdquo;.
+與性別行為準則相違背的男孩被認為是&rdquo;偽娘&rdquo;, 女孩是&rdquo;假小子&rdquo;.</p>
 </blockquote>
 
 <p>be/become the norm</p>
@@ -922,6 +949,11 @@ After months of investigation and hearings, a parliamentary committee has come t
 
 <p><em>a binding contract/promise/agreement etc</em>: a promise, agreement etc that must be obeyed. 具有约束力[必须履行]的合同/承诺/协议等</p>
 
+<blockquote>
+<p>Once signed, these documents are legally <strong>binding</strong>.
+一但被簽署, 這些文件就具有法律約束力.</p>
+</blockquote>
+
 <ul>
 <li>binding:(n)</li>
 </ul>
@@ -1018,6 +1050,16 @@ After months of investigation and hearings, a parliamentary committee has come t
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[The Guardian] The Guardian view on alcohol: drinking less is good for you</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/theguardian/banningallcats_0912/'>
+        <span class='screen-reader-text'>Next post: </span>[The Guardian] Paw outcome? New Zealand council proposes banning all cats<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
