--- a/developmenttools/awk_study/index.html
+++ b/developmenttools/awk_study/index.html
@@ -100,6 +100,8 @@ AWK 可用來對很多有相同格式的文字檔案進行修改, 更新, 或是
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
