--- a/englishnews/BBCNews/elonmusk_0824/index.html
+++ b/englishnews/BBCNews/elonmusk_0824/index.html
@@ -94,6 +94,8 @@ If it turns out his Twitter promise - that he has secured the tens of billions o
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
