--- a/englishnews/reuters/alaskaairlines_0826/index.html
+++ b/englishnews/reuters/alaskaairlines_0826/index.html
@@ -94,6 +94,8 @@ He flew for about one hour, often erratically with attempts at aerial stunts, be
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
