--- a/englishnews/theguardian/freesanitary_0906/index.html
+++ b/englishnews/theguardian/freesanitary_0906/index.html
@@ -94,6 +94,8 @@ The Scottish government is the first in the world to make sanitary products avai
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
