--- a/englishnews/theguardian/hackeraustralian_0829/index.html
+++ b/englishnews/theguardian/hackeraustralian_0829/index.html
@@ -96,6 +96,8 @@ Despite the court being told that the teenager had downloaded 90GB of secure fil
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
