--- a/englishnews/washingtonpost/trollaccount_0823/index.html
+++ b/englishnews/washingtonpost/trollaccount_0823/index.html
@@ -96,6 +96,8 @@ As the 2016 presidential campaign heated up, AllForUSA.com suddenly bristled wit
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
