--- a/web/staticsitegenerator/hugo/usehugo_1/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_1/index.html
@@ -106,6 +106,8 @@ $ hugo version Hugo Static Site Generator v0.42.2 darwin/amd64  建立網站 $ h
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
