--- a/web/staticsitegenerator/hugo/usehugo_2/index.html
+++ b/web/staticsitegenerator/hugo/usehugo_2/index.html
@@ -100,6 +100,8 @@ config.toml Hugo 網站主要是透過 config.toml 這個檔案來調控, 當你
       </li><li>
         <a href='/tags/mit' style='font-size:1.3333333333333333em'>MIT</a>
       </li><li>
+        <a href='/tags/nature' style='font-size:1em'>Nature</a>
+      </li><li>
         <a href='/tags/newyorktimes' style='font-size:1.3333333333333333em'>NewYorkTimes</a>
       </li><li>
         <a href='/tags/nutrition' style='font-size:1em'>Nutrition</a>
