1. new english study post. 2. modify julia and python index page.

--- a/englishnews/theguardian/banningallcats_0912/index.html
+++ b/englishnews/theguardian/banningallcats_0912/index.html
@@ -90,7 +90,7 @@ Ali Meade, the council&rsquo;s biosecurity operations manager, said that if the 
       </li><li>
         <a href='/tags/guardian' style='font-size:1.3333333333333333em'>Guardian</a>
       </li><li>
-        <a href='/tags/health' style='font-size:1.3333333333333333em'>Health</a>
+        <a href='/tags/health' style='font-size:1.6666666666666665em'>Health</a>
       </li><li>
         <a href='/tags/julia' style='font-size:1em'>Julia</a>
       </li><li>
@@ -778,6 +778,16 @@ Alfred 雄心勃勃，一心想着发财.</p>
 </svg>
  Previous</span>
         <span class='screen-reader-text'>Previous post: </span>[Reuters] French baguette faces pinch from anti-salt lawmakers</a>
+    </div><div class='next-entry sep-before'>
+      <a href='/englishnews/washingtonpost/nopainnogain_0919/'>
+        <span class='screen-reader-text'>Next post: </span>[Washington Post] &#39;No pain, no gain&#39; sounds tough, but you may only be hurting yourself<span aria-hidden='true'>Next <svg class='icon' viewbox='0 0 24 24' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' aria-hidden='true'>
+  
+  <line x1="4" y1="12" x2="20" y2="12"/>
+  <polyline points="14 6 20 12 14 18"/>
+  
+</svg>
+</span>
+      </a>
     </div></div>
 </nav>
 
