modified pipenv content.

--- a/python/index.html
+++ b/python/index.html
@@ -198,11 +198,7 @@
 
 <div class='entry'>
   <div class='container entry-content'>
-  <blockquote>
-<p>~  ~
-[Due date: 2018-08-26]1. 紀錄一下 virtualenv 的設定
-[Due Date: 2018-08-27]2. <a href="https://www.roytuts.com" target="_blank">https://www.roytuts.com</a> 這個網站有蠻多例子可學, 先看關於 Face detection 的例子, 裡頭有用到 openCV.</p>
-</blockquote>
+  <p><a href="https://www.roytuts.com" target="_blank">https://www.roytuts.com</a> 這個網站有蠻多例子可學, 先看關於 Face detection 的例子, 裡頭有用到 openCV.</p>
 
 <p><a href="http://www.techbeamers.com/essential-python-tips-tricks-programmers/?utm_campaign=weekly&amp;utm_medium=email&amp;utm_source=newsletter_mailer" target="_blank">30 ESSENTIAL PYTHON TIPS AND TRICKS FOR PROGRAMMERS</a></p>
 
