--- a/python/pipenv_0918/index.html
+++ b/python/pipenv_0918/index.html
@@ -287,6 +287,7 @@ $ virtualenv --system-site_packages VenvName  進入虛擬環境 成功後, $ so
 <li><a href="#進階用法">進階用法</a></li>
 <li><a href="#目前遇到-pipenv-的問題">目前遇到 pipenv 的問題</a></li>
 </ul></li>
+<li><a href="#reference">Reference</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -549,6 +550,16 @@ records = &quot;*&quot;
 
 <li><p>在預設建立開發環境時,  pipenv 會使用 python 3.7, 而目前 tensorflow 還無法相容於 python 3.7, <a href="https://github.com/pypa/pipenv/issues/2619" target="_blank">https://github.com/pypa/pipenv/issues/2619</a>.</p></li>
 </ol>
+
+<h2 id="reference">Reference</h2>
+
+<p><a href="https://matthewbilyeu.com/blog/python-environment-with-pipenv-jupyter-and-ein/" target="_blank">Python environment with Pipenv, Jupyter, and EIN</a></p>
+
+<p><a href="http://www.dongwm.com/archives/使用pipenv管理你的项目/" target="_blank">使用pipenv管理你的项目</a>,</p>
+
+<p><a href="https://github.com/pypa/pipenv" target="_blank">pipenv source code</a>,</p>
+
+<p><a href="https://pipenv.readthedocs.io/en/latest/" target="_blank">pipenv 官方網站</a></p>
 
 </div>
 
